--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,17 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.0.2",
+    "axios": "^1.9.0",
     "framer-motion": "^12.7.4",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-infinite-logo-slider": "^1.1.4",
     "react-multi-carousel": "^2.8.6",
+    "react-razorpay": "^3.0.1",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2"
   },
