--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
     "razorpay": "^2.9.6"
   }
 }
