--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.0.2",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.9.0",
     "framer-motion": "^12.7.4",
     "ogl": "^1.0.11",
