--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
-    "google-auth-library": "^9.15.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.10",
-    "passport": "^0.7.0",
-    "passport-google-oidc": "^0.1.0",
     "razorpay": "^2.9.6"
   }
 }
