--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^7.0.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.9.0",
-    "framer-motion": "^12.7.4",
+    "jwt-decode": "^4.0.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
