--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
